--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,6 +28,7 @@ jobs:
           ref: '${{ github.ref }}'
           install-pytorch: 'true'
           install-lxml: 'true'
+          extra-modules-to-install: 'optuna'
 
       - uses: actions/checkout@v3
       - name: Test with pytest
