--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,6 +45,7 @@ jobs:
           python3 -m pip install -r easygraph-bench/requirements.txt
 
       - name: 'C++ Sanity Check'
+        if: ${{ matrix.python-version == '3.10' }}
         shell: bash
         working-directory: easygraph-bench
         run: |
