--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -45,7 +45,9 @@ jobs:
       # - name: Install build dependencies
       #   run: |
       #     python -m pip install pybind11 cibuildwheel
-      - name: Build wheels
+      - name: Build wheels (Linux)
+        # if on linux
+        if: 'matrix.os == "ubuntu-latest"'
         uses: pypa/cibuildwheel@v2.8.1
         env:
           # CIBW_BEFORE_ALL: python -m pip install pybind11
@@ -53,6 +55,16 @@ jobs:
           # CIBW_TEST_COMMAND: pytest --disable-warnings {package} -c {package}/pytest.ini
         # run: |
         #   cibuildwheel
+
+      - name: Build wheels (macOS)
+        # if on linux
+        if: 'matrix.os == "macos-latest"'
+        uses: pypa/cibuildwheel@v2.8.1
+        env:
+          # CIBW_BEFORE_ALL: python -m pip install pybind11
+          CIBW_TEST_SKIP: "*"
+          CC: 'gcc-12'
+          CXX: 'g++-12'
 
       - uses: actions/upload-artifact@v2
         with:
