--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -58,15 +58,15 @@ jobs:
         # run: |
         #   cibuildwheel
 
-      - name: Build wheels (macOS)
-        # if on linux
-        if: 'matrix.os == ''macos-latest'''
-        uses: pypa/cibuildwheel@v2.8.1
-        env:
-          # CIBW_BEFORE_ALL: python -m pip install pybind11
-          CIBW_TEST_SKIP: "*"
-          CC: 'gcc-12'
-          CXX: 'g++-12'
+    #   - name: Build wheels (macOS)
+    #     # if on linux
+    #     if: 'matrix.os == ''macos-latest'''
+    #     uses: pypa/cibuildwheel@v2.8.1
+    #     env:
+    #       # CIBW_BEFORE_ALL: python -m pip install pybind11
+    #       CIBW_TEST_SKIP: "*"
+    #       CC: 'gcc-12'
+    #       CXX: 'g++-12'
 
       - uses: actions/upload-artifact@v2
         with:
