--- a/.github/workflows/archive/release-macos.yaml
+++ b/.github/workflows/archive/release-macos.yaml
@@ -9,7 +9,7 @@ jobs:
   build-n-publish:
     # name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     name: Build and publish Python 🐍 distributions 📦 to PyPI
-    # runs-on: ubuntu-latest
+    # runs-on: ubuntu-20.04
     runs-on: macos-latest
     strategy:
       matrix:
