--- a/.github/workflows/archive/release-manylinux.yaml
+++ b/.github/workflows/archive/release-manylinux.yaml
@@ -6,8 +6,8 @@ jobs:
   build-n-publish:
     # name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     name: Build and publish Python 🐍 distributions 📦 to PyPI
-    # runs-on: ubuntu-latest
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04
     # strategy:
     #   matrix:
     #     python-version: ["3.6", "3.7", "3.8", "3.9"]
