--- a/.github/workflows/cibw-pybind11.yaml
+++ b/.github/workflows/cibw-pybind11.yaml
@@ -28,7 +28,7 @@ concurrency:
 jobs:
   build_sdist:
     name: Build SDist
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
 
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
@@ -73,7 +73,7 @@ jobs:
     name: Upload to Test PyPI
     if: inputs.upload == 'test_pypi'
     needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     # if: startsWith(github.event.ref, 'refs/tags/v')
@@ -100,7 +100,7 @@ jobs:
     if: inputs.upload == 'pypi'
     # needs: [build_wheels, build_sdist, upload_test_pypi, verify_installation]
     needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     # if: startsWith(github.event.ref, 'refs/tags/v')
@@ -124,7 +124,7 @@ jobs:
   # upload_all:
   #   name: Upload if release
   #   needs: [build_wheels, build_sdist]
-  #   runs-on: ubuntu-latest
+  #   runs-on: ubuntu-20.04
   #   if: github.event_name == 'release' && github.event.action == 'published'
 
   #   steps:
