--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -6,7 +6,7 @@ on:
   #     - master
 jobs:
   get_data:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@master
