--- a/.github/workflows/pip-pybind11.yaml
+++ b/.github/workflows/pip-pybind11.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [windows-latest, macos-latest, ubuntu-20.04]
         python-version: ["3.7", "3.11"]
 
     runs-on: ${{ matrix.platform }}
