--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
   build_sdist:
     name: Build source distribution
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
 
@@ -85,7 +85,7 @@ jobs:
   #   runs-on: ${{ matrix.os }}
   #   strategy:
   #     matrix:
-  #       os: [ubuntu-latest, windows-latest, macos-latest]
+  #       os: [ubuntu-20.04, windows-latest, macos-latest]
   #       python-version: ["3.6", "3.7", "3.8", "3.9"]
   #       # python-version: ["3.8", "3.9"]
 
@@ -114,7 +114,7 @@ jobs:
     name: Upload to Test PyPI
     if: inputs.upload == 'test_pypi'
     needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     # if: startsWith(github.event.ref, 'refs/tags/v')
@@ -141,7 +141,7 @@ jobs:
     if: inputs.upload == 'pypi'
     # needs: [build_wheels, build_sdist, upload_test_pypi, verify_installation]
     needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     # if: startsWith(github.event.ref, 'refs/tags/v')
