--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -37,7 +37,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-latest]
+        # os: [ubuntu-20.04, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
