--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -7,7 +7,7 @@ jobs:
       - id: build
         uses: OpenAstronomy/build-python-dist@v1
         with:
-          python-version: ['3.8','3.9','3.10']
+          python-version: '3.9'
 
   upload_artifact:
     steps:
