--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -2,6 +2,7 @@ name: Build and download wheel
 on: workflow_dispatch
 jobs:
   buildwheel:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - id: build
