--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -11,6 +11,7 @@ jobs:
           python-version: '3.9'
 
   upload_artifact:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
 
