--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -23,6 +23,10 @@ jobs:
           python setup.py build_ext
           python setup.py install
           python setup.py bdist_wheel
+      - uses: actions/upload-artifact@v3
+        with:
+           name: my-artifact
+           path: path/to/artifact/ # or path/to/artifact
           
 #       - name: upload_artifact
 #       - uses: actions/checkout@v3
@@ -30,27 +34,27 @@ jobs:
 #       - uses: actions/download-artifact@v3
 #         with:
 #           name: my-artifact
-#           path: path/to/artifact
+#           path: dist/
     
 #       - name: Display structure of downloaded files
 #         run: ls -R
 #         working-directory: path/to/artifact
         
-  upload_artifact:
-   runs-on: ${{ matrix.os }}
-   strategy:
-      matrix:
-        os: [ windows-latest ]
-        python-version: [ 3.8, 3.9 ]
-   steps:
-     - uses: actions/checkout@v3
+#   upload_artifact:
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#       matrix:
+#         os: [ windows-latest ]
+#         python-version: [ 3.8, 3.9 ]
+#    steps:
+#      - uses: actions/checkout@v3
 
-     - run: mkdir -p path/to/artifact
+#      - run: mkdir -p path/to/artifact
 
-     - run: echo hello > path/to/artifact/world.txt
+#      - run: echo hello > path/to/artifact/world.txt
 
-     - uses: actions/upload-artifact@v3
-       with:
-         name: my-artifact
-         path: path/to/artifact/ # or path/to/artifact
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          name: my-artifact
+#          path: path/to/artifact/ # or path/to/artifact
 
