--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest ]
-        python-version: [ 3.8, 3.9 ]
+        os: [ windows-latest ubuntu-latest]
+        python-version: [ "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v2
