--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, ubuntu-latest]
+        os: [ windows-latest, ubuntu-latest, macos-latest]
         python-version: [ "3.8", "3.9", "3.10"]
 
     steps:
