--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -18,6 +18,8 @@ jobs:
         run: |
           
           mkdir -p path/to/artifact
+          pip install --upgrade pip
+          pip install setuptools -U
           pip install pybind11
           pip install wheel
           python setup.py build_ext
