--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -19,11 +19,11 @@ jobs:
           
           mkdir -p path/to/artifact
           pip install --upgrade pip
-          pip install setuptools -U
+          pip install --upgrade setuptools
           pip install pybind11
           pip install wheel
-          python setup.py build_ext
-          python setup.py install
+#          python setup.py build_ext
+#          python setup.py install
           python setup.py bdist_wheel
           ls
       - uses: actions/upload-artifact@v3
