--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           
           mkdir -p path/to/artifact
+          python -m pip install -r requirements.txt
           pip install --upgrade pip
           pip install --upgrade setuptools
           pip install pybind11
