--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, ubuntu-latest, macos-latest]
+        os: [ windows-latest, ubuntu-20.04, ubuntu-latest, macos-latest, macos-latest-xl, windows-2019,	macos-13, macos-13-xl, macos-11]
         python-version: [ "3.8", "3.9", "3.10"]
 
     steps:
