--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -37,16 +37,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-latest]
-#        os: [ubuntu-20.04]
+        # os: [ubuntu-20.04, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref }}
 
       # - name: Install build dependencies
       #   run: |
       #     python -m pip install pybind11 cibuildwheel
-      - name: Build wheels
+      - name: Build wheels (Linux)
+        # if on linux
+        if: 'matrix.os == ''ubuntu-latest'''
         uses: pypa/cibuildwheel@v2.8.1
         env:
           # CIBW_BEFORE_ALL: python -m pip install pybind11
@@ -54,6 +58,16 @@ jobs:
           # CIBW_TEST_COMMAND: pytest --disable-warnings {package} -c {package}/pytest.ini
         # run: |
         #   cibuildwheel
+
+    #   - name: Build wheels (macOS)
+    #     # if on linux
+    #     if: 'matrix.os == ''macos-latest'''
+    #     uses: pypa/cibuildwheel@v2.8.1
+    #     env:
+    #       # CIBW_BEFORE_ALL: python -m pip install pybind11
+    #       CIBW_TEST_SKIP: "*"
+    #       CC: 'gcc-12'
+    #       CXX: 'g++-12'
 
       - uses: actions/upload-artifact@v2
         with:
@@ -65,6 +79,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
 
       - name: Build sdist
         run: |
