--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -37,8 +37,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [ubuntu-20.04, windows-latest, macos-latest]
-        os: [ubuntu-20.04]
+         os: [ubuntu-20.04, windows-latest, macos-latest]
+#        os: [ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
@@ -50,7 +50,6 @@ jobs:
       #     python -m pip install pybind11 cibuildwheel
       - name: Build wheels (Linux)
         # if on linux
-        if: 'matrix.os == ''ubuntu-latest'''
         uses: pypa/cibuildwheel@v2.8.1
         env:
           # CIBW_BEFORE_ALL: python -m pip install pybind11
