--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-20.04, ubuntu-latest, macos-latest,  windows-2019,	macos-13,  macos-11]
-        python-version: [ "3.7","3.8", "3.9", "3.10","3.11"]
+        python-version: [ "3.8", "3.9", "3.10","3.11"]
 
     steps:
       - uses: actions/checkout@v2
