chore: add test.py in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 __pycache__
 test/
 related-repos/
-
+test.py
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
