--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__
 test/
 related-repos/
 test.py
+hypergraph_tutorial.py
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
