--- a/.github/workflows/translator.yaml
+++ b/.github/workflows/translator.yaml
@@ -1,21 +1,3 @@
-name: 'issue-translator'
-on:
-  issue_comment:
-    types: [created]
-  issues:
-    types: [opened]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: usthe/issues-translate-action@v2.7
-        with:
-          IS_MODIFY_TITLE: false
-          # not require, default false, . Decide whether to modify the issue title
-          # if true, the robot account @Issues-translate-bot must have modification permissions, invite @Issues-translate-bot to your project or use your custom bot.
-          CUSTOM_BOT_NOTE: Bot detected the issue body's language is not English, translate it automatically. 👯👭🏻🧑‍🤝‍🧑👫🧑🏿‍🤝‍🧑🏻👩🏾‍🤝‍👨🏿👬🏿
-          # not require. Customize the translation robot prefix message.
 #name: 'issue-translator'
 #on:
 #  issue_comment:
@@ -29,7 +11,25 @@ jobs:
 #    steps:
 #      - uses: usthe/issues-translate-action@v2.7
 #        with:
-#          BOT_GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
-#          # Required, input your bot github token
-#          # Not required, suggest not input, action will get name from BOT_GITHUB_TOKEN
-#          # If input, BOT name must match github token
+#          IS_MODIFY_TITLE: false
+#          # not require, default false, . Decide whether to modify the issue title
+#          # if true, the robot account @Issues-translate-bot must have modification permissions, invite @Issues-translate-bot to your project or use your custom bot.
+#          CUSTOM_BOT_NOTE: Bot detected the issue body's language is not English, translate it automatically. 👯👭🏻🧑‍🤝‍🧑👫🧑🏿‍🤝‍🧑🏻👩🏾‍🤝‍👨🏿👬🏿
+#          # not require. Customize the translation robot prefix message.
+name: 'issue-translator'
+on:
+  issue_comment:
+    types: [created]
+  issues:
+    types: [opened]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: usthe/issues-translate-action@v2.7
+        with:
+          BOT_GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
+          # Required, input your bot github token
+          # Not required, suggest not input, action will get name from BOT_GITHUB_TOKEN
+          # If input, BOT name must match github token
