chore: add issue-translator workflow

--- a/.github/workflows/translator.yaml
+++ b/.github/workflows/translator.yaml
@@ -30,6 +30,7 @@ jobs:
       - uses: usthe/issues-translate-action@v2.7
         with:
           BOT_GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
+          CUSTOM_BOT_NOTE:
           # Required, input your bot github token
           # Not required, suggest not input, action will get name from BOT_GITHUB_TOKEN
           # If input, BOT name must match github token
