feat: add def_v_dict for hypergraph degree cache; imporve the performances of degree,distance,neighbor,incidence_matrix

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ related-repos/
 test.py
 hypergraph_tutorial.py
 visulation_test.py
+hypergraph-bench/
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
