--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         # ubuntu 22.04 has deprecated python 3.6
-        python-version: ["3.7", "3.8", "3.9", "3.10","3.11"]
+        python-version: [ "3.8", "3.9", "3.10","3.11"]
     steps:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -28,7 +28,7 @@ jobs:
           ref: '${{ github.ref }}'
           install-pytorch: 'true'
           install-lxml: 'true'
-          extra-modules-to-install: 'optuna'
+          extra-modules-to-install: 'optuna' 'torch'
 
 
       - uses: actions/checkout@v3
