--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, ubuntu-20.04, ubuntu-latest, macos-latest,  windows-2019,	macos-13,  macos-11]
-        python-version: [ "3.8", "3.9", "3.10","3.11"]
+        os: [ windows-latest, ubuntu-20.04,  macos-latest,  windows-2019,	macos-13,  macos-11]
+        python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v2
