--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -39,7 +39,7 @@ jobs:
       matrix:
 #         os: [ubuntu-20.04, windows-latest, macos-latest]
         os: [ubuntu-20.04]
-        python-version: [ "3.8", "3.9", "3.10", "3.11"]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3,12"]
 
     steps:
       - uses: actions/checkout@v3
