--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -10,14 +10,14 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, ubuntu-20.04, ubuntu-latest, macos-latest,  windows-2019,	macos-13,  macos-11]
-        python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
+#        python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up python
         uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+#        with:
+#          python-version: ${{ matrix.python-version }}
 #      - name: build wheel
 #        run: |
 #          mkdir -p path/to/artifact
