--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -28,8 +28,8 @@ jobs:
 #          python setup.py bdist_wheel
 #          ls
 
-#      - name: Build wheels
-#        uses: pypa/cibuildwheel@v2.17.0
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.17.0
 
 
 
