--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -28,15 +28,21 @@ jobs:
 #          python setup.py bdist_wheel
 #          ls
 
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.17.0
+
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.17.0
+        run: python -m cibuildwheel --output-dir wheelhouse
 
 
-
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-           name: my-artifact
-           path: dist/ # or path/to/artifact
+            name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+            path: ./wheelhouse/*.whl
+#      - uses: actions/upload-artifact@v3
+#        with:
+#           name: my-artifact
+#           path: dist/ # or path/to/artifact
 
         
           
