--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,10 @@ force-exclude = '''
 # ]
 # ignore_missing_imports = true
 
+[project]
+requires-python = ">3.7"
+
+
 [tool.coverage.run]
 branch = true
 source = ["easygraph/"]
