--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -25,13 +25,13 @@ jobs:
         matrix:
           # macos-13 is an intel runner, macos-14 is apple silicon
           os: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
-          python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
+#          python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
 
       steps:
         - uses: actions/checkout@v4
 
         - name: Build wheels
-          uses: pypa/cibuildwheel@v2.17.0
+          uses: pypa/cibuildwheel@v2.16.2
 
         - uses: actions/upload-artifact@v4
           with:
