chore: test build workflow

--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -24,7 +24,7 @@ jobs:
       strategy:
         matrix:
           # macos-13 is an intel runner, macos-14 is apple silicon
-          os: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
+          os: [ ubuntu-latest, windows-latest, macos-13, macos-14, ubuntu-20.04 ]
 #          python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
 
       steps:
