integrate gpu_easygraph into cpp_easygraph

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gpu_easygraph/pybind11"]
-	path = gpu_easygraph/pybind11
-	url = git@github.com:pybind/pybind11.git
+[submodule "cpp_easygraph/pybind11"]
+	path = cpp_easygraph/pybind11
+	url = https://github.com/pybind/pybind11.git
