GPU-based SSSP is added. Return type of BC, CC and k-core are modified.

--- a/cpp_easygraph/CMakeLists.txt
+++ b/cpp_easygraph/CMakeLists.txt
@@ -20,6 +20,8 @@ if (EASYGRAPH_ENABLE_GPU)
         $<TARGET_OBJECTS:gpu_easygraph>
     )
 
+    set_property(TARGET cpp_easygraph PROPERTY CUDA_ARCHITECTURES all)
+
     target_compile_definitions(cpp_easygraph 
         PRIVATE EASYGRAPH_ENABLE_GPU
     )
