--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -29,6 +29,8 @@ jobs:
 
       steps:
         - uses: actions/checkout@v4
+          with:
+            submodules: recursive
 
         - name: Build wheels
           uses: pypa/cibuildwheel@v2.17.0
