--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -3,8 +3,6 @@ on: workflow_dispatch
 
 
 jobs:
-
-
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
@@ -29,33 +27,31 @@ jobs:
 #          modify python version in project.toml
 
       steps:
-        - uses: actions/checkout@v4
-          with:
-            submodules: recursive
+      # 检出代码
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-        # You can test your matrix by printing the current Python version
-        - name: Display Python version
-          run: python -c "import sys; print(sys.version)"
+      # You can test your matrix by printing the current Python version
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
 
-        - name: Install dependencies
-          run: python -m pip install --upgrade pip setuptools wheel
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip setuptools wheel
 
-        - name: Build wheels
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.21.3
+        with:
+          output-dir: dist/
 
-          uses: pypa/cibuildwheel@v2.21.3
-          with:
-            output-dir: dist/
-
-        - name: Upload wheels
-          uses: actions/upload-artifact@v4
-          with:
-            name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-            path: dist/
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: dist/
 
 
 
   upload_pypi:
-
       needs: [ build_wheels, build_sdist ]
       runs-on: ubuntu-latest
       environment: pypi
@@ -65,7 +61,9 @@ jobs:
         - uses: actions/download-artifact@v4
           with:
             # unpacks all CIBW artifacts into dist/
-            python-version: ${{ matrix.python-version }}
             pattern: cibw-*
             path: dist/
             merge-multiple: true
+
+
+
