--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -49,10 +49,15 @@ jobs:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: dist/
 
+        - uses: actions/upload-artifact@v4
+          with:
+            python-version: ${{ matrix.python-version }}
+            name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+            path: dist/*.tar.gz
+
 
   upload_pypi:
       needs: [ build_wheels, build_sdist ]
-
       runs-on: ubuntu-latest
       environment: pypi
       permissions:
