--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-sdist
-          path: dist/*.tar.gz
+          path: dist/
 
   build_wheels:
       name: Build wheels on ${{ matrix.os }}
@@ -43,6 +43,7 @@ jobs:
         with:
           output-dir: dist/
 
+
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -57,7 +58,6 @@ jobs:
       environment: pypi
       permissions:
         id-token: write
-
       steps:
         - uses: actions/download-artifact@v4
           with:
@@ -65,6 +65,14 @@ jobs:
             pattern: cibw-*
             path: dist/
             merge-multiple: true
+
+        - name: Upload to PyPI
+          env:
+              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          run: |
+              python -m pip install --upgrade pip twine
+              twine upload dist/*
 
 
 
