--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-sdist
-          path: dist/
+          path: dist/*.tar.gz
 
   build_wheels:
       name: Build wheels on ${{ matrix.os }}
@@ -49,7 +49,6 @@ jobs:
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: dist/
-
 
 
   upload_pypi:
