--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -25,7 +25,6 @@ jobs:
           # macos-13 is an intel runner, macos-14 is apple silicon
           os: [ ubuntu-latest, windows-latest, macos-latest, macos-13, macos-14]
 #          modify python version in project.toml
-
       steps:
       # 检出代码
       - name: Checkout code
@@ -64,13 +63,13 @@ jobs:
             path: dist/
             merge-multiple: true
 
-        - name: Upload to PyPI
-          env:
-              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-          run: |
-              python -m pip install --upgrade pip twine
-              twine upload dist/*
+#        - name: Upload to PyPI
+#          env:
+#              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+#              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+#          run: |
+#              python -m pip install --upgrade pip twine
+#              twine upload dist/*
 
 
 
