--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy>=1.24.3
+numpy>=2.0.1
 setuptools>=66.0.0
 scipy>=1.10.1
 matplotlib>=3.7.1
@@ -8,7 +8,7 @@ pandas>=2.0.1
 nose>=1.3.7
 pybind11>=2.10.4
 pydsge
-torch==2.5.0
+torch
 requests
 six>=1.15.0
 optuna
