--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         # ubuntu 22.04 has deprecated python 3.6
-        python-version: [ "3.8", "3.9", "3.10","3.11", "3.12", "3.13"]
+        python-version: [ "3.8", "3.9", "3.10","3.11", "3.12"]
     steps:
       - uses: actions/checkout@v3
         with:
