--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -3,19 +3,19 @@ on: workflow_dispatch
 
 
 jobs:
-  build_sdist:
-    name: Build source distribution
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Build sdist
-        run: pipx run build --sdist
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: cibw-sdist
-          path: dist/*.tar.gz
+#  build_sdist:
+#    name: Build source distribution
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Build sdist
+#        run: pipx run build --sdist
+#
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: cibw-sdist
+#          path: dist/*.tar.gz
 
   build_wheels:
       name: Build wheels on ${{ matrix.os }}
@@ -63,13 +63,13 @@ jobs:
             path: dist/
             merge-multiple: true
 
-#        - name: Upload to PyPI
-#          env:
-#              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-#              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-#          run: |
-#              python -m pip install --upgrade pip twine
-#              twine upload dist/*
+        - name: Upload to PyPI
+          env:
+              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          run: |
+              python -m pip install --upgrade pip twine
+              twine upload dist/*
 
 
 
