--- a/.github/workflows/pip-pybind11.yaml
+++ b/.github/workflows/pip-pybind11.yaml
@@ -16,17 +16,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-22.04]
-        python-version: ["3.8", "3.11"]
+        platform: [windows-latest, macos-latest, ubuntu-latest]
+        python-version: ["3.9", "3.12"]
 
     runs-on: ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
+    - name: Installing dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+        path: "requirements.txt"
 
     - name: Add requirements
       run: python -m pip install --upgrade wheel setuptools
@@ -37,34 +47,3 @@ jobs:
     - name: Test
       run: python tests/test.py
 
-  build-mingw64:
-    runs-on: windows-latest
-    defaults:
-      run:
-        shell: msys2 {0}
-    steps:
-    - uses: msys2/setup-msys2@v2
-      with:
-        update: true
-        install: >-
-          mingw-w64-x86_64-gcc
-          mingw-w64-x86_64-python-pip
-          mingw-w64-x86_64-python-wheel
-
-    - uses: actions/checkout@v3
-
-    - name: Install pybind11
-      # This is required because --no-build-isolation disable dependences
-      # installation
-      run: pip install pybind11
-
-    - name: Build and install
-      # --no-build-isolation is required because the vanilla setuptool does not
-      # support Mingw64.See patches here:
-      # https://github.com/msys2/MINGW-packages/tree/master/mingw-w64-python-setuptools
-      # Without those patches build_ext fails with:
-      # error: --plat-name must be one of ('win32', 'win-amd64', 'win-arm32', 'win-arm64')
-      run: pip install --no-build-isolation .
-
-    - name: Test
-      run: python tests/test.py
