--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -50,7 +50,7 @@ jobs:
 
 
   upload_pypi:
-      needs: [ build_wheels, build_sdist ]
+      needs: [ build_wheels ]
       runs-on: ubuntu-latest
       environment: pypi
       permissions:
