--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -29,6 +29,7 @@ jobs:
       # 检出代码
       - name: Checkout code
         uses: actions/checkout@v3
+            - uses: actions/setup-python@v5
 
       # You can test your matrix by printing the current Python version
       - name: Display Python version
@@ -36,10 +37,22 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel
 
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==3.0.0b1
+
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21.3
-        with:
-          output-dir: dist/
+        run: python -m cibuildwheel --output-dir wheelhouse
+        
+      # You can test your matrix by printing the current Python version
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip setuptools wheel
+
+      # - name: Build wheels
+      #   uses: pypa/cibuildwheel@v2.21.3
+      #   with:
+      #     output-dir: dist/
 
 
       - name: Upload wheels
