--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -32,6 +32,11 @@ jobs:
       
       - uses: actions/setup-python@v5
 
+      - name: Upload pybind11
+      - run: cd /project/
+              git submodule add https://github.com/pybind/pybind11 cpp_easygraph/pybind11
+              git submodule update --init --recursive
+              
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
@@ -39,7 +44,7 @@ jobs:
         run: python -m pip install --upgrade pip setuptools wheel build pybind11
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v3.0.0b1
+        uses: pypa/cibuildwheel@v2.23.3
         with:
           output-dir: dist/
         
