chore: update workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@
 # maintainers = [
 #     "Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"
 # ]
-# license = "MIT"
+license = "BSD 3-Clause"
 
 # readme = "README.md"
 
