--- a/.github/workflows/pr_code_check.yaml
+++ b/.github/workflows/pr_code_check.yaml
@@ -1,4 +1,4 @@
-name: Pip
+name: PR code review
 
 on:
   workflow_dispatch:
@@ -24,9 +24,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        submodules: recursive
+        submodules: true
 
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -39,7 +39,7 @@ jobs:
         path: "requirements.txt"
 
     - name: Add requirements
-      run: python -m pip install --upgrade wheel setuptools
+      run: python -m pip install --upgrade setuptools wheel build packaging
 
     - name: Build and install
       run: pip install --verbose .
