feat(packaging): add optional Graphviz dependency
- Introduced `graphviz` as an optional dependency in `pyproject.toml`, requiring `lxml>=6.0.2`.
- Enables additional functionality for users needing Graphviz-related features.

This addition improves the flexibility of the package by allowing optional integration with Graphviz.

Signed-off-by: acture <acturea@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,11 @@ dependencies = [
 [project.scripts]
 easy-graph = "easy_graph:main"
 
+[project.optional-dependencies]
+graphviz = [
+    "lxml>=6.0.2",
+]
+
 [tool.scikit-build]
 minimum-version = "build-system.requires"
 build-dir = "build/{wheel_tag}"
