fix(packaging): update Graphviz optional dependency to `pygraphviz>=1.14`
- Replaced `lxml>=6.0.2` with `pygraphviz>=1.14` in `pyproject.toml` under `[project.optional-dependencies]`.
- Ensures compatibility and better alignment with Graphviz-related features.

Signed-off-by: acture <acturea@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ easy-graph = "easy_graph:main"
 
 [project.optional-dependencies]
 graphviz = [
-    "lxml>=6.0.2",
+    "pygraphviz>=1.14",
 ]
 
 [tool.scikit-build]
