refactor(readwrite): remove warnings, fix indentation, and clean up parsing logic
- Removed unnecessary `warnings` imports and deprecated warnings in the GML parsing module (`gml.py`).
- Fixed inconsistent indentation across GML and GraphML modules to adhere to PEP 8 standards.
- Improved readability by cleaning up GML parsing logic, particularly around `parse_gml_lines` and helper functions.
- Minor fix in GraphML

Signed-off-by: acture <acturea@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ dev = [
 
 [tool.pytest.ini_options]
 python_files = "**/tests/test_*.py"
-addopts = "-ra --disable-warnings"
+addopts = "-ra"
 
 
 # pyproject.toml
